# PADEngine

./: .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in  extra.css  main.dox
examples/: CMakeLists.txt
examples/demo/: lightdemo.cpp  main.cpp  shaderdemo.cpp  shaderdemo.h
examples/demo/collisiondemo/: collisiondemo.cpp  collisiondemo.h
examples/demo/lightdemo/: lightdemo.cpp  lightdemo.h
examples/demo/objectdemo/: objectdemo.cpp  objectdemo.h
examples/demo/shaderdemo/: canvas.cpp  canvas.h  shaderdemo.cpp  shaderdemo.h
examples/shaders/: compile.bat  frag.spv  frag_2D.spv  frag_custom.spv  fragment_shader.frag  fragment_shader_2D.frag  fragment_shader_custom.frag  vert.spv  vert_custom.spv  vertex_shader.vert  vertex_shader_custom.vert
examples/startup/: main.cpp  myscene.cpp  myscene.h
include/PADEngine/: README.md  padengine.h
project/shaders/: compile.bat  frag.spv  fragment_shader.frag  vert.spv  vertex_shader.vert
project/source/: buffer.cpp  buffer.h  camera.cpp  color.h  core.cpp  core.h  depthbuffer.cpp  depthbuffer.h  descriptor.cpp  descriptor.h  descriptorlayout.cpp  descriptorlayout.h  descriptorpool.cpp  devicehandler.cpp  devicehandler.h  enity.cpp  entity.cpp  entity.h  framebuffers.cpp  framebuffers.h  hierarchy.cpp  hierarchy.h  imagebuffer.cpp  imagebuffer.h  indexbuffer.cpp  indexbuffer.h  input.cpp  input.h  logger.h  main.cpp  material.cpp  material.h  materialmanager.cpp  materialmanager.h  mesh.cpp  mesh.h  meshbuffer.cpp  meshbuffer.h  modelloader.cpp  modelloader.h  (+40 more)
shaders/: frag_red.spv  fragment_shader.frag
src/: CMakeLists.txt  boxcollider.h  buffer.cpp  buffer.h  camera.cpp  camera.h  collider.h  color.h  config.h  core.cpp  core.h  depthbuffer.cpp  depthbuffer.h  descriptor.cpp  descriptor.h  descriptorlayout.cpp  descriptorlayout.h  descriptorpool.cpp  descriptorpool.h  devicehandler.cpp  devicehandler.h  enity.cpp  entity.cpp  entity.h  framebuffers.cpp  framebuffers.h  hierarchy.cpp  hierarchy.h  imagebuffer.cpp  imagebuffer.h  indexbuffer.cpp  indexbuffer.h  input.h  light.cpp  light.h  logger.h  main.cpp  material.cpp  material.h  materialbuffer.cpp  (+57 more)
startup/: main.cpp  myscene.cpp  myscene.h
